--- a/demo/src/containers/Dashboard/Dashboard.css
+++ b/demo/src/containers/Dashboard/Dashboard.css
@@ -41,7 +41,7 @@ body {
     }
 
     .AgentCardHeader {
-        height: 65px;
+        height: 62px;
     }
 }
 
